Fix the layout bug in explore-show with hard code.

--- a/app/assets/stylesheets/ng-app/_pure-custom.scss
+++ b/app/assets/stylesheets/ng-app/_pure-custom.scss
@@ -48,6 +48,13 @@ a{
 .pure-button{
   transition: all 0.3s;
   -webkit-transition: all 0.3s;
+  cursor: pointer;
+  span{
+    cursor: pointer;
+  }
+  a{
+    cursor: pointer;
+  }
 }
 .button-primary{
   color: #fff;
