--- a/app/assets/stylesheets/ng-app/explore.scss
+++ b/app/assets/stylesheets/ng-app/explore.scss
@@ -47,7 +47,8 @@
       }
     }
     .book-info{
-      margin-top: -156px;
+      margin-left: 160px;
+      margin-top: -176px;
       h2{
         margin-bottom: 5px;
       }
